updtate dico debut constructeur

--- a/project boggle/project boggle.csproj
+++ b/project boggle/project boggle.csproj
@@ -12,6 +12,12 @@
     <None Update="Files\Lettres.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Files\MotsPossiblesEN.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Files\MotsPossiblesFR.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
